# Touchgfxbase

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
config/gcc/: app.mk
gui/include/gui/common/: FrontendApplication.hpp  FrontendHeap.hpp
gui/include/gui/template_screen/: TemplatePresenter.hpp  TemplateView.hpp
gui/src/common/: FrontendApplication.cpp
gui/src/template_screen/: TemplatePresenter.cpp  TemplateView.cpp
